@@ -20,6 +20,7 @@ Version 0.3p
  - Placeholder appearance screen (only for player atm).
  - Placeholder progress messages (right now, implemented pregnancies are about 24 hours for testing purposes)
  - Currently, the PLAYER can get pregnant from bunnies, equines, lizards and cats.
+* Added the first part of the Burrows questline.
 
 --------------------------------------------
              PREVIOUS VERSIONS
